--- a/.github/workflows/cov-pylint.yml
+++ b/.github/workflows/cov-pylint.yml
@@ -29,9 +29,8 @@ jobs:
           poetry-version: ${{ matrix.poetry-version }}
 
       - name: Install packages
-        run: python pytest install
-      - name: Install
-        run: python coverage install
+        run: python -m pip install --upgrade pip
+          pip install pytest coverage
 
       - name: Create report
         run: coverage run -m pytest
