--- a/.github/workflows/gh-sphinx.yml
+++ b/.github/workflows/gh-sphinx.yml
@@ -1,36 +1,41 @@
-name: Docs2Pages
+name: Sphinx documentation
 on:
   push:
-    tags: '*'
-  pull_request:
-    branches:
+    branches: 
       - master
   workflow_dispatch:
-
 jobs:
-  build-docs:
+  ci:
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.10.6"]
+        poetry-version: ["1.2.1"]
+    
     runs-on: ubuntu-latest
+    
     steps:
-    - name: Checkout
-      uses: actions/checkout@master
-      with:
-        fetch-depth: 0
-    - uses: actions/setup-python@v2
-      with:
-        python-version: 3.9
-    - uses: abatilo/actions-poetry@v2.1.3
-    - name: install
-      run: poetry install -E amazon -E docs
-    - name: Build documentation
-      run: |
-        mkdir gh-pages
-        touch gh-pages/.nojekyll
-        cd docs/
-        poetry run sphinx-build -b html . _build
-        cp -r _build/* ../gh-pages/        
-    - name: Deploy documentation
-      if: ${{ github.event_name == 'push' }}
-      uses: JamesIves/github-pages-deploy-action@4.1.4
-      with:
-        branch: gh-pages
-        folder: gh-pages
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Run image
+        uses: abatilo/actions-poetry@v2
+        with:
+          poetry-version: ${{ matrix.poetry-version }}
+
+      - name: Install packages
+        run: python -m poetry install
+
+      - name: Build documentation
+        run: |
+          mkdir gh-pages
+          touch gh-pages/.nojekyll
+          cd docs/
+          poetry run sphinx-build -b html . _build
+          cp -r _build/* ../gh-pages/
+      - name: Deploy documentation
+        if: ${{ github.event_name == 'push' }}
+        uses: JamesIves/github-pages-deploy-action@4.1.4
+        with:
+          folder: gh-pages
