--- a/.github/workflows/gh-sphinx.yml
+++ b/.github/workflows/gh-sphinx.yml
@@ -1,41 +1,38 @@
-name: Sphinx documentation
+name: Docs2Pages
 on:
   push:
-    branches: 
+    tags: '*'
+  pull_request:
+    branches:
       - master
   workflow_dispatch:
+
 jobs:
-  ci:
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["3.10.6"]
-        poetry-version: ["1.2.1"]
-    
+  build-docs:
     runs-on: ubuntu-latest
-    
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Run image
-        uses: abatilo/actions-poetry@v2
-        with:
-          poetry-version: ${{ matrix.poetry-version }}
+    - name: Checkout
+      uses: actions/checkout@master
+      with:
+        fetch-depth: 0
+    - uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
+    - uses: abatilo/actions-poetry@v2.1.3
+    - name: install
+      run: python -m pip install --upgrade pip
+          pip install shpinx
 
-      - name: Install packages
-        run: python -m poetry install
-
-      - name: Build documentation
-        run: |
-          mkdir gh-pages
-          touch gh-pages/.nojekyll
-          cd docs/
-          poetry run sphinx-build -b html . _build
-          cp -r _build/* ../gh-pages/
-      - name: Deploy documentation
-        if: ${{ github.event_name == 'push' }}
-        uses: JamesIves/github-pages-deploy-action@4.1.4
-        with:
-          folder: gh-pages
+    - name: Build documentation
+      run: |
+        mkdir gh-pages
+        touch gh-pages/.nojekyll
+        cd docs/
+        sphinx-build -b html . _build
+        cp -r _build/* ../gh-pages/        
+    - name: Deploy documentation
+      if: ${{ github.event_name == 'push' }}
+      uses: JamesIves/github-pages-deploy-action@4.1.4
+      with:
+        branch: gh-pages
+        folder: gh-pages
