--- a/.github/workflows/gh-sphinx.yml
+++ b/.github/workflows/gh-sphinx.yml
@@ -20,7 +20,7 @@ jobs:
         python-version: 3.9
     - uses: abatilo/actions-poetry@v2.1.3
     - name: install
-      run: python -m pip install shpinx
+      run: python -m pip install sphinx
 
     - name: Build documentation
       run: |
