--- a/.github/workflows/gh-sphinx.yml
+++ b/.github/workflows/gh-sphinx.yml
@@ -1,37 +1,22 @@
-name: Docs2Pages
-on:
-  push:
-    tags: '*'
-  pull_request:
-    branches:
-      - master
-  workflow_dispatch:
-
+name: Docs
+on: [push, pull_request, workflow_dispatch]
 jobs:
-  build-docs:
+  docs:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@master
-      with:
-        fetch-depth: 0
-    - uses: actions/setup-python@v2
-      with:
-        python-version: 3.9
-    - uses: abatilo/actions-poetry@v2.1.3
-    - name: install
-      run: python -m pip install sphinx
-
-    - name: Build documentation
-      run: |
-        mkdir gh-pages
-        touch gh-pages/.nojekyll
-        cd docs/
-        sphinx-build -b html . _build
-        cp -r _build/* ../gh-pages/        
-    - name: Deploy documentation
-      if: ${{ github.event_name == 'push' }}
-      uses: JamesIves/github-pages-deploy-action@4.1.4
-      with:
-        branch: gh-pages
-        folder: gh-pages
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+      - name: Install dependencies
+        run: |
+          pip install sphinx sphinx_rtd_theme
+      - name: Sphinx build
+        run: |
+          sphinx-build doc _build
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
+        with:
+          publish_branch: gh-pages
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: _build/
+          force_orphan: true
